feat: add Starlight docs site + marketing copy updates
- Migrate docs to @astrojs/starlight with built-in search, TOC, dark/light mode
- Add 8 hand-authored SDK docs (Getting Started, Guides)
- Add API docs generation pipeline (pydoc-markdown + typedoc)
- Update marketing copy: 'Own Your User' messaging
- Add Starlight brand theming overrides
- Update deploy workflow for docs generation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -29,6 +29,17 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install pydoc-markdown
+        run: pip install pydoc-markdown
+
+      - name: Generate API docs
+        run: bash scripts/generate-api-docs.sh
 
       - name: Build Astro
         run: npm run build
